[package]
name = "ozpv"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
leptos = { version = "0.7.0" }
leptos_router = { version = "0.7.0" }
console_error_panic_hook = "0.1"
leptos_meta = { version = "0.7.0" }
thiserror = "2"
leptos_icons = "0.5.0"
icondata = "0.5.0"
web-sys = { version = "0.3.7", features = ["DomRect"] } 

# hydration
wasm-bindgen = { version = "=0.2.100", optional = true }

# server
http = { version = "1", optional = true }
axum = { version = "0.7", optional = true }
leptos_axum = { version = "0.7.0", optional = true }
tokio = { version = "1", features = ["rt-multi-thread"], optional = true }
tower = { version = "0.5", optional = true }
tower-http = { version = "0.6", features = ["compression-gzip", "fs", "trace"], optional = true }
tracing = { version = "0.1.41", optional = true }
tracing-subscriber = { version = "0.3.19", optional = true }

[features]
hydrate = [
	"dep:wasm-bindgen",
	"leptos/hydrate",
]
ssr = [
	"dep:http",
    "dep:axum",
    "dep:tokio",
    "dep:tower",
    "dep:tower-http",
    "dep:leptos_axum",
	"dep:tracing",
	"dep:tracing-subscriber",
    "leptos/ssr",
    "leptos_meta/ssr",
    "leptos_router/ssr",
]

# server speed optimized
[profile.release]
codegen-units = 1
lto = true

[profile.wasm-release]
inherits = "release"
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"

[package.metadata.leptos]
output-name = "ozpv"
site-root = "target/site"
site-pkg-dir = "pkg"
tailwind-input-file = "style/tailwind.css"
assets-dir = "assets"
site-addr = "127.0.0.1:3000"
reload-port = 3001
browserquery = "defaults"
env = "DEV"
bin-features = ["ssr"]
bin-default-features = false
lib-features = ["hydrate"]
lib-default-features = false
lib-profile-release = "wasm-release"
